--- a/Lab2/API.Services/API.Services.csproj
+++ b/Lab2/API.Services/API.Services.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7F1368F0-2FC2-409D-A992-48509F22C873}</ProjectGuid>
+    <ProjectGuid>{05A559B6-79B0-472F-B228-57F02F6FA387}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>API.Models</RootNamespace>
-    <AssemblyName>API.Models</AssemblyName>
+    <RootNamespace>API.Services</RootNamespace>
+    <AssemblyName>API.Services</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,11 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CourseDetailsDTO.cs" />
-    <Compile Include="CourseDTO.cs" />
-    <Compile Include="CourseViewModel.cs" />
+    <Compile Include="CoursesServiceProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StudentDTO.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\API.Models\API.Models.csproj">
+      <Project>{7f1368f0-2fc2-409d-a992-48509f22c873}</Project>
+      <Name>API.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
