Starting to work on the actual project and stop following dabs

--- a/Lab2/Lab2/Web.config
+++ b/Lab2/Lab2/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="AppDataContext" 
-		 connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\CoursesDB.mdf;Initial Catalog=CoursesDB;Integrated Security=True" 
+		 connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\CoursesDB2.mdf;Initial Catalog=CoursesDB2;Integrated Security=True" 
 		 providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
