--- a/Lab2/Lab2/Web.config
+++ b/Lab2/Lab2/Web.config
@@ -9,9 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="AppDataContext" 
-		 connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\CoursesDB2.mdf;Initial Catalog=CoursesDB2;Integrated Security=True" 
-		 providerName="System.Data.SqlClient" />
+    <add name="AppDataContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\CoursesDB3.mdf;Initial Catalog=CoursesDB3;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
