--- a/Lab2/API.Services/API.Services.csproj
+++ b/Lab2/API.Services/API.Services.csproj
@@ -55,6 +55,7 @@
     <Compile Include="CoursesServiceProvider.cs" />
     <Compile Include="Entities\Course.cs" />
     <Compile Include="Entities\CourseTemplate.cs" />
+    <Compile Include="Exceptions\AppPersonNotFoundException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\AppDataContext.cs" />
   </ItemGroup>
