--- a/Lab2/API.Services/API.Services.csproj
+++ b/Lab2/API.Services/API.Services.csproj
@@ -51,11 +51,14 @@
   <ItemGroup>
     <Compile Include="Entities\CourseStudent.cs" />
     <Compile Include="Entities\Person.cs" />
+    <Compile Include="Entities\WaitingList.cs" />
     <Compile Include="Exceptions\AppObjectNotFoundException.cs" />
     <Compile Include="CoursesServiceProvider.cs" />
     <Compile Include="Entities\Course.cs" />
     <Compile Include="Entities\CourseTemplate.cs" />
     <Compile Include="Exceptions\AppPersonNotFoundException.cs" />
+    <Compile Include="Exceptions\WaitingListException.cs" />
+    <Compile Include="Exceptions\MaxStudentsException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\AppDataContext.cs" />
   </ItemGroup>
