--- a/Lab2/API.Models/API.Models.csproj
+++ b/Lab2/API.Models/API.Models.csproj
@@ -53,7 +53,7 @@
     <Compile Include="CourseDetailsDTO.cs" />
     <Compile Include="CourseDTO.cs" />
     <Compile Include="Courses\UpdateCourseViewModel.cs" />
-    <Compile Include="CourseViewModel.cs" />
+    <Compile Include="Courses\CourseViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentDTO.cs" />
   </ItemGroup>
