--- a/Lab2/API.Models/API.Models.csproj
+++ b/Lab2/API.Models/API.Models.csproj
@@ -51,12 +51,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Courses\Students\AddStudentViewModel.cs" />
-    <Compile Include="CourseDetailsDTO.cs" />
-    <Compile Include="CourseDTO.cs" />
+    <Compile Include="Courses\CourseDetailsDTO.cs" />
+    <Compile Include="Courses\CourseDTO.cs" />
     <Compile Include="Courses\UpdateCourseViewModel.cs" />
     <Compile Include="Courses\CourseViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StudentDTO.cs" />
+    <Compile Include="Courses\Students\StudentDTO.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
